--- a/css/style.css
+++ b/css/style.css
@@ -4,12 +4,19 @@
     margin: 0;
 }
 #root {
+    width : 450px;
+    padding: 10px;
     margin-left: 50px;
     margin-top: 50px;
+    border: 3px solid green;
+    border-radius: 5px;
+    background-color: rgba(240,248,255);
 }
 ol {
+    list-style-type: upper-roman;
     margin-left: 50px;
-    margin-top: 50px;
+    margin-top: 20px;
+    padding: 10px;
 }
 input {
     width : 200px;
@@ -23,5 +30,7 @@ button {
 li {
     font-size: 24px;
     line-height: 35px;
+}
+i {
     cursor: pointer;
 }
