messaggio lista terminata

--- a/css/style.css
+++ b/css/style.css
@@ -34,3 +34,9 @@ li {
 i {
     cursor: pointer;
 }
+h2 {
+    text-transform: uppercase;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    color: red;
+}
